--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.0.1",
     "react-toastify": "^8.1.1",
+    "redux": "^4.1.2",
+    "redux-logger": "^3.0.6",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
